# geographiclib-python

./: .gitignore  CMakeLists.txt  HOWTO-RELEASE.txt  LICENSE  README.md  setup.cfg.in  setup.py  setup.py.in
distrib-Python/: 00README.md
doc/: CMakeLists.txt  conf.py  geodesics.rst  index.rst  interface.rst  package.rst
geographiclib/: CMakeLists.txt  __init__.py.in  accumulator.py  constants.py  geodesic.py  geodesiccapability.py  geodesicline.py  geomath.py  polygonarea.py
geographiclib/test/: test_geodesic.py  test_sign.py
